wcfsetup/install/files/style/layout.less
/* ... */
@media only screen and (max-width: 800px) {
	.tabMenuContainer.containerPadding > .menu {
		margin: -@wcfGapSmall -@wcfGapMedium @wcfGapSmall -@wcfGapMedium; /* reverse paddings from .containerPadding */
	}
}

.containerPadding > .tabMenuContainer:last-child {
	margin-bottom: @wcfGapSmall;
}

/* jquery ui fixes */
.ui-tabs .ui-tabs-hide {
	display: none !important;
}

.ui-helper-hidden {
	display: none;
}

.ui-helper-hidden-accessible {
	position: absolute !important;
	clip: rect(1px 1px 1px 1px);
	clip: rect(1px,1px,1px,1px);
}

/* ### tabular boxes ### */
.tabularBox {
	background-color: @wcfTabularBoxBackgroundColor;
	border: 1px solid @wcfContainerBorderColor;
	
	> .container {
		border: 0;
	}
}

.tabularBoxTitle > header {
	color: @wcfTabularBoxColor;
	padding: 5px 7px;
	
	> h2 {
		font-size: @wcfTitleFontSize;
		font-weight: bold;
		
		.textShadow(@wcfTabularBoxBackgroundColor);
		
		> a {
			color: @wcfTabularBoxColor;
			
			&:hover {
				color: @wcfTabularBoxHoverColor;
				text-decoration: none;
			}
		}
	}
	
	.icon {
		color: @wcfTabularBoxColor;
		
		.textShadow(@wcfTabularBoxBackgroundColor);
	}
}

@media only screen and (max-width: 800px) {
	.tabularBox {
		border-width: 1px 0;
	}
	
	.tabularBoxTitle {
		border-top-width: 0;
	}
}

@media only screen and (min-width: 641px) and (max-width: 800px) {
	.tabularBoxTitle > header {
		padding-left: @wcfGapMedium;
		padding-right: @wcfGapMedium;
	}
}

.table,
.cke_wysiwyg_div table {
	border-spacing: 0;
	width: 100%;
	
	/* cells */
	th,
	td {
		padding: @wcfGapSmall;
		text-align: left;
		vertical-align: middle;
		
		> label {
			cursor: pointer;
			display: block;
			margin: -@wcfGapSmall;
			padding: @wcfGapSmall;
			
			> input[type="checkbox"] {
				margin: -1px 3px 0;
			}
		}
	}
	
	/* headline */
	th {
		border-right: 1px solid rgba(0, 0, 0, .2);
		color: @wcfTabularBoxColor;
		font-size: @wcfSmallFontSize;
		font-weight: bold;
		white-space: nowrap;
		word-wrap: normal;
		
		.textShadow(@wcfTabularBoxBackgroundColor);
		.linearGradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, 0), rgba(0, 0, 0, .3));
		
		> a {
			color: @wcfTabularBoxColor;
			display: block;
			margin: -@wcfGapSmall;
			position: relative;
			
			&:hover {
				text-decoration: none;
			}
			
			> img {
				margin: -5px 0;
			}
		}
		
		&.active > a {
			background-color: rgba(0, 0, 0, .1);
			color: @wcfTabularBoxHoverColor;
			
			.boxShadowInset(0, 10px, rgba(0, 0, 0, .1), 10px, -10px);
		}
		
		&.ASC > a,
		&.DESC > a {
			padding-right: 20px;
		}
		
		&.ASC > a::after,
		&.DESC > a::after {
			display: inline-block;
			font-family: FontAwesome;
			font-size: 14px;
			position: absolute;
			margin-left: @wcfGapTiny;
			
			.textShadow(@wcfTabularBoxBackgroundColor);
		}
		
		&.ASC > a::after {
			content: "\f0de";
			top: 8px;
		}
		
		&.DESC > a::after {
			content: "\f0dd";
			top: 3px;
		}
		
		&:hover > a {
			background-color: rgba(0, 0, 0, .2);
			color: @wcfTabularBoxHoverColor;
		}
		
		> * {
			padding: @wcfGapSmall;
		}
	}
	
	/* content */
	td {
		background-color: @wcfContainerBackgroundColor;
		
		.transition(background, .1s);
		
		&.columnMark,
		&.columnStatus {
			text-align: center;
			width: 1px;
			white-space: nowrap;
			word-wrap: normal;
		}
		
		&.columnDigits,
		&.columnID {
			text-align: right;
			width: 1px;
			white-space: nowrap;
			word-wrap: normal;
		}
		
		&.columnIcon {
			text-align: left;
			width: 1px;
			white-space: nowrap;
			word-wrap: normal;
		}
		
		&.columnTitle {
			font-weight: bold;
			text-align: left;
		}
		
		&.columnText {
			font-weight: normal;
			text-align: left;
			max-width: 20%;
		}
		
		&.columnDate {
			font-size: @wcfSmallFontSize;
			text-align: right;
			width: 1px;
			white-space: nowrap;
			word-wrap: normal;
		}
		
		&.columnURL, &.columnSmallText {
			font-size: @wcfSmallFontSize;
			text-align: left;
		}
	}
	
	/* striped */
	> tbody {
		> tr:nth-child(even) > td {
			background-color: @wcfContainerAccentBackgroundColor;
		}
	}
	
	/* hover */
	> tbody {
		> tr {
			&:not(:last-child) {
				> td {
					border-bottom: 1px solid rgba(255, 255, 255, .3);
				}
			}
			
			&:hover {
				> td {
					background-color: @wcfContainerHoverBackgroundColor;
				}
			}
			
			> td:not(:last-child) {
				border-right: 1px solid rgba(255, 255, 255, .3);
			}
			
			> td.focus {
				background-color: @wcfContainerHoverBackgroundColor;
			}
			
			> td.left {
				text-align: left;
			}
			
			> td.right {
				text-align: right;
			}
		}
	}
	
	.statusDisplay {
		float: right;
		
		.statusIcons {
			float: right;
			margin-left: @wcfGapSmall;
			
			li {
				display: inline-block;
			}
		}
	}
	
	tr {
		&.jsMarked {
			color: @wcfSelectedColor;
			
			> td {
				background-color: @wcfSelectedBackgroundColor !important;
			}
			
			a:not(.badge) {
				color: @wcfSelectedColor;
			}
		}
	}
}

@media screen and (max-width: 800px) {
	.responsiveTable {
		display: block;
		
		thead, tbody, th, td, tr {
			display: block;
		}
		
		thead tr {
			display: none;
		}
		
		tr {
			border: 1px solid @wcfContainerBorderColor;
			border-top-width: 0;
			
			&:last-child {
				border-bottom-width: 0;
			}
		}
		
		td {
			text-align: left !important;
			max-width: none !important;
			width: auto !important;
		}
	}
}

/* ### definition lists ### */
dl.statsDataList {
	> dt {
		color: @wcfDimmedColor;
		display: block;
		float: right;
		font-size: @wcfSmallFontSize;
		line-height: 1.5;
		overflow: hidden;
		text-align: left;
		white-space: nowrap;
		width: 62%;
		word-wrap: normal;
		
		> a {
			text-decoration: none;
		}
		
		&:not(:first-child) {
			clear: both;
		}
	}
	
	> dd {
		color: @wcfColor;
		float: left;
		font-weight: bold;
		margin: 0;
		overflow: hidden;
		text-align: right;
		text-overflow: ellipsis;
		white-space: nowrap;
		width: 35%;
		word-wrap: normal;
		
		> a {
			text-decoration: none;
		}
	}
	
	&::after {
		display: table;
		content: "";
		clear: both;
	}
}
/* ... */

